# mlops_dtu_2025_project7

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  check_registry.py  lstm_model.pth  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py  trigger_wandb_workflow.py
.github/workflows/: build-docker.yaml  ci.yml  model_registry_trigger.yml
configs/: config.yaml  logging_config.yaml
data/: data.py
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: StarterNotebook_competition.ipynb
reports/: README.md
src/mlops_2025_floods_prediction/: data.py  fastAPI.py  hydra_config.py  logging_util.py  test_app.py  train.py
src/mlops_2025_floods_prediction/.github/workflows/: ci.yml
src/mlops_2025_floods_prediction/conf/: config.yaml
tests/: test_data.py
wandb/: latest-run
wandb/run-20250112_130506-94ef85wa/: run-94ef85wa.wandb
wandb/run-20250112_130506-94ef85wa/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20250112_131343-olodvocg/: run-olodvocg.wandb
wandb/run-20250112_131343-olodvocg/files/: config.yaml  wandb-metadata.json
wandb/run-20250112_131929-dy335q2c/: run-dy335q2c.wandb
wandb/run-20250112_131929-dy335q2c/files/: config.yaml  lstm_model.pth  test_predictions.csv  wandb-metadata.json  wandb-summary.json
